feat: successfully deployed Kibana with Ansible
- Configured Kibana to listen on all interfaces (server.host: "0.0.0.0")
- Verified connectivity on port 5601
- Adjusted Elasticsearch and Kibana SSL settings for compatibility

--- a/deploy_monitoring.yml
+++ b/deploy_monitoring.yml
@@ -5,9 +5,9 @@
   gather_facts: yes
 
   tasks:
-   # - name: update-system
-     # ansible.builtin.include_role:
-      #  name: update-system
+    - name: update-system
+      ansible.builtin.include_role:
+        name: update-system
 
     - name: elk_server
       ansible.builtin.include_role:
