--- a/roles/elk_server/tasks/Ubuntu.yml
+++ b/roles/elk_server/tasks/Ubuntu.yml
@@ -57,6 +57,14 @@
     group: root
     mode: '0644'
 
+- name: Deploy Metricbeat configuration
+  ansible.builtin.template:
+    src: metricbeat.yml.j2
+    dest: /etc/metricbeat/metricbeat.yml
+    owner: root
+    group: root
+    mode: '0644'
+
 - name: Enable and start elasticsearch, logstash, kibana
   ansible.builtin.systemd:
     name: "{{ item }}"
@@ -82,4 +90,19 @@
 - name: Load Filebeat dashboards
   command: filebeat setup --dashboards
   become: true
+
+- name: Enable Metricbeat system module
+  command: metricbeat modules enable system
+  args:
+    creates: /etc/metricbeat/modules.d/system.yml
+  become: true
+
+- name: Setup Metricbeat dashboards and ingest pipelines
+  command: metricbeat setup
+  become: true
+
+- name: Load Metricbeat dashboards
+  command: metricbeat setup --dashboards
+  become: true
+
 
