feat(beats_agents): deploy Filebeat and Metricbeat on Ubuntu clients
- Simplified the beats_agents role by unifying Debian and RedHat tasks into a single Ubuntu-specific task file
- Removed redundant Debian.yml and RedHat.yml includes
- Added a condition to apply Filebeat/Metricbeat config only if the client is running Ubuntu
- Ensured correct configuration and deployment of filebeat.yml and metricbeat.yml from templates
- Validated data ingestion and dashboard visibility in Kibana for both client nodes

--- a/roles/beats_agents/tasks/main.yml
+++ b/roles/beats_agents/tasks/main.yml
@@ -1,13 +1,5 @@
 ---
-- name: Include Debian-specific tasks
-  ansible.builtin.include_tasks: Debian.yml
-  when: ansible_os_family == "Debian"
-
-- name: Include RedHat-specific tasks
-  ansible.builtin.include_tasks: RedHat.yml
-  when: ansible_os_family == "RedHat"
-
-- name: Deploy and enable Filebeat/Metricbeat
-  ansible.builtin.include_tasks: configure.yml
-
+- ansible.builtin.include_tasks:
+    file: "Ubuntu.yml"
+  when: ansible_distribution == "Ubuntu"
 
